--- a/Dealership-Inventory/app/src/main/res/values/strings.xml
+++ b/Dealership-Inventory/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_car_details">CarDetails</string>
+    <string name="open" />
+    <string name="close" />
 </resources>
